--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongoose": "^6.2.2"
   }
